# licpp

./: CMakeLists.txt  readme.md
include/: eval.h  node.h  parser.h  tokenizer.h  types.h
src/: eval.cpp  main.cpp  node.cpp  parser.cpp  tokenizer.cpp
